Fix document title with LINE SEPARATOR/PARAGRAPH SEPARATOR/LINE TABULATION

This fix is to align document title with FF(IE fails) and spec.

From the spec, "it must replace any sequence of one or more consecutive
space characters in that string with a single U+0020 SPACE character".
Here "space characters" refer to "U+0020 SPACE, U+0009 CHARACTER TABULATION
(tab), U+000A LINE FEED (LF), U+000C FORM FEED (FF), and U+000D CARRIAGE
RETURN (CR)".
U+2028 LINE SEPARATOR/ U+2029 PARAGRAPH SEPARATOR/ U+000B LINE TABULATION
are not listed and should be supported in title.

Note, for case fast/dom/Document/document-title-get.html there still exists
inconsistency among IE/FF(Win)/FF(Ubuntu).
IE:         FAIL document.title should be one\u000b\u000c
space. Was one space.
FF(Win):    FAIL document.title should be one\u000b\u000c
space. Was one\u000b space.
FF(Ubuntu): FAIL document.title should be one\u000b space. Was one\u000b\u000cspace.

Spec:
https://html.spec.whatwg.org/multipage/dom.html#document.title
https://html.spec.whatwg.org/multipage/infrastructure.html#strip-and-collapse-whitespace
https://html.spec.whatwg.org/multipage/infrastructure.html#space-character

BUG=661859
TEST=imported/wpt/html/dom/documents/dom-tree-accessors/document.title-05.html

Review-Url: https://codereview.chromium.org/2469983007
Cr-Commit-Position: refs/heads/master@{#430508}

Former-commit-id: e27088bd97ee3aecb9d04c56743c629a43b7f621